--- a/src/Projects/style.css
+++ b/src/Projects/style.css
@@ -1,70 +1,9 @@
-.header {
-    position: relative;
-  
-    background: blue;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  
-    margin: auto 0px 40px 0px;
-    padding: 16px 0;
-    border: 1px dotted black; /*primary-main*/
-  
-    overflow: visible !important;
-  }
-  
-  .header_root {
-    position: relative;
-    top: -40px;
-    bottom: 0px;
-
-    box-shadow: 4px 4px 20px 1px rgba(0, 0, 0, 0.2);
-  
-    margin: 0 20px;
-    border-radius: 4px;
-  }
-  
-  .title {
-    color: white;
-  }
-  
-  .subheader {
-    color: white !important;
-    opacity: 0.7;
-  }
-  
-  .inner {
-    position: relative;
-    margin: 0 20px;
-    top: -15px;
-  }
-  
-  .chips {
-    position: relative;
-    top: 10px;
-  }
-  
-  .buttons {
-    position: relative;
-    float: right;
-    width: auto;
-  }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .column {
-    flex: 1; /* grow */
-    min-width: 40%;
-    max-width: 45%;
-    margin: 20px;
-  }
+.project-heading {
+  text-align: center;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
   
   @media (max-width: 900px) {
     .column {
