--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -5,4 +5,7 @@
   
   .introduction-text {
     margin-bottom: 0;
+    font-weight: 150;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
