--- a/src/components/ContactMe/style.css
+++ b/src/components/ContactMe/style.css
@@ -8,10 +8,16 @@
     color: white;
     text-transform: uppercase;
     letter-spacing: 1px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   .contact-list {
     list-style: none;
     text-align: left;
     text-indent: 2px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
